--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -20,7 +20,8 @@ body{
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='600' y1='25' x2='600' y2='777'%3E%3Cstop offset='0' stop-color='%230F292F'/%3E%3Cstop offset='1' stop-color='%23501F3A'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='650' y1='25' x2='650' y2='777'%3E%3Cstop offset='0' stop-color='%230d2a34'/%3E%3Cstop offset='1' stop-color='%235a2140'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='700' y1='25' x2='700' y2='777'%3E%3Cstop offset='0' stop-color='%230c2b38'/%3E%3Cstop offset='1' stop-color='%23652345'/%3E%3C/linearGradient%3E%3ClinearGradient id='d' gradientUnits='userSpaceOnUse' x1='750' y1='25' x2='750' y2='777'%3E%3Cstop offset='0' stop-color='%230f2b3d'/%3E%3Cstop offset='1' stop-color='%236f254b'/%3E%3C/linearGradient%3E%3ClinearGradient id='e' gradientUnits='userSpaceOnUse' x1='800' y1='25' x2='800' y2='777'%3E%3Cstop offset='0' stop-color='%23142b41'/%3E%3Cstop offset='1' stop-color='%237a2650'/%3E%3C/linearGradient%3E%3ClinearGradient id='f' gradientUnits='userSpaceOnUse' x1='850' y1='25' x2='850' y2='777'%3E%3Cstop offset='0' stop-color='%231c2a44'/%3E%3Cstop offset='1' stop-color='%23852855'/%3E%3C/linearGradient%3E%3ClinearGradient id='g' gradientUnits='userSpaceOnUse' x1='900' y1='25' x2='900' y2='777'%3E%3Cstop offset='0' stop-color='%23252946'/%3E%3Cstop offset='1' stop-color='%2390295a'/%3E%3C/linearGradient%3E%3ClinearGradient id='h' gradientUnits='userSpaceOnUse' x1='950' y1='25' x2='950' y2='777'%3E%3Cstop offset='0' stop-color='%232e2846'/%3E%3Cstop offset='1' stop-color='%239c2a5e'/%3E%3C/linearGradient%3E%3ClinearGradient id='i' gradientUnits='userSpaceOnUse' x1='1000' y1='25' x2='1000' y2='777'%3E%3Cstop offset='0' stop-color='%23372646'/%3E%3Cstop offset='1' stop-color='%23a72b63'/%3E%3C/linearGradient%3E%3ClinearGradient id='j' gradientUnits='userSpaceOnUse' x1='1050' y1='25' x2='1050' y2='777'%3E%3Cstop offset='0' stop-color='%23402443'/%3E%3Cstop offset='1' stop-color='%23b32c67'/%3E%3C/linearGradient%3E%3ClinearGradient id='k' gradientUnits='userSpaceOnUse' x1='1100' y1='25' x2='1100' y2='777'%3E%3Cstop offset='0' stop-color='%2349213f'/%3E%3Cstop offset='1' stop-color='%23bf2c6b'/%3E%3C/linearGradient%3E%3ClinearGradient id='l' gradientUnits='userSpaceOnUse' x1='1150' y1='25' x2='1150' y2='777'%3E%3Cstop offset='0' stop-color='%23501F3A'/%3E%3Cstop offset='1' stop-color='%23CB2D6F'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill-opacity='0.12'%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' x='100' width='1100' height='800'/%3E%3Crect fill='url(%23c)' x='200' width='1000' height='800'/%3E%3Crect fill='url(%23d)' x='300' width='900' height='800'/%3E%3Crect fill='url(%23e)' x='400' width='800' height='800'/%3E%3Crect fill='url(%23f)' x='500' width='700' height='800'/%3E%3Crect fill='url(%23g)' x='600' width='600' height='800'/%3E%3Crect fill='url(%23h)' x='700' width='500' height='800'/%3E%3Crect fill='url(%23i)' x='800' width='400' height='800'/%3E%3Crect fill='url(%23j)' x='900' width='300' height='800'/%3E%3Crect fill='url(%23k)' x='1000' width='200' height='800'/%3E%3Crect fill='url(%23l)' x='1100' width='100' height='800'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
     color: #CCCCCC;
 }
 
@@ -38,10 +39,11 @@ header{
 }
 
 .nav{
-    background-color:#CCCCCC ;
+    background-color:#CCCCCC;
     width: 8%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     height: 100%;
@@ -50,20 +52,37 @@ header{
 .nav div{
     padding:0.5rem ;
     width: 4rem;
-    transition-duration: 0.5s;
+    transition-duration: 0.3s;
     margin-bottom: 0.3rem;
 }
 
 
 .nav div:hover{
-    width: 4.2rem;
-    transition-duration: 0.5s;
-    
+    width: 4.5rem;
+    transition-duration: 0.3s;
 }
+
+
 
 
 #marca{
     width: auto;
+}
+
+#marca:hover{
+    transform: rotate(15deg);
+}
+
+#menu{
+    border-top: 2px solid black;
+}
+
+#salir{
+    border-top: 2px solid black;
+}
+
+box-icon{
+   width: 48px; 
 }
 
 .center{
@@ -101,7 +120,7 @@ header{
   
 
 
-img{
+.nav img{
     width: 92%;
     margin-left: 8%
 }
@@ -131,15 +150,19 @@ p{
 #pizzas{
     width: 92%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #CCCCCC;
     margin-left: 8%;
 }
 
 #pizzas img{
     padding: 0.5rem;
-    margin-left: 3%;
     width: 5rem;
+}
+
+#pizzas img:hover{
+    transform: rotate(15deg);
+    cursor: pointer;
 }
 
 #pizzas div:hover{
@@ -165,14 +188,9 @@ p{
     position: relative
 }
 
-
-/* SECCION PRODUCTOS */
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap'); */
-
-/* body {
-    font-family: "Poppins", sans-serif;
-    color: #CCCCCC;
-} */
+.principal{
+    height: 100vh;
+}
 
 a,
 a:hover {
@@ -443,8 +461,14 @@ a:hover {
 #divisorBurgers2{
     width: 100%;
     height: 15vh;
-    background-image: url();
     background-size: auto;
+}
+
+#divisorBurgers3{
+    width: 100%;
+    height: 15vh;
+    background-image: url(https://s3.amazonaws.com/arc-wordpress-client-uploads/infobae-wp/wp-content/uploads/2018/06/13172547/picadas-destacada.jpg);
+    background-size: cover;
 }
 
 #divisorBurgers img{
@@ -457,6 +481,19 @@ a:hover {
     justify-content: center;
     align-items: center;
     
+}
+
+/* SWEET ALERT */
+.swal2-popup{
+    
+    background-image: linear-gradient(to bottom right,#225f6d, #6b1a3c) !important;
+    color: #CCCCCC !important;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.swal2-styled.swal2-confirm{
+    background-color: #225f6d !important;
+    color: #CCCCCC !important;
 }
 
 /* VIDEO */
@@ -473,10 +510,179 @@ a:hover {
 #video2 {
     top: 0;
     left: 0;
-    width: 100%;
+    width: 92%;
+    margin-left: 8%;
     height: 100vh;
     object-fit: cover;
 }
+
+
+/* DARK MODE */
+  /* body {
+    height: 100%;
+    background: linear-gradient(#ffad00 50%, #d58500);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
+  
+  form {
+    width: 600px;
+    height: 350px;
+    margin: -4px -2px; 
+    border-radius: 500px;
+    background: linear-gradient(#ffbd00, #ca7900);
+    box-shadow: 0 1px 5px hsla(41, 100%, 40%, 0.3),
+           -3px 25px 25px hsla(41, 100%, 35%, 0.5),
+           -6px 50px 50px hsla(41, 100%, 30%, 0.3),
+           -9px 65px 65px hsla(41, 100%, 20%, 0.3);
+  }
+  
+  .toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 350px;
+    background: #ffad00;
+    border-radius: 500px;
+    border: solid 5px transparent;
+    background-clip: padding-box;
+    cursor: pointer;
+  }
+  
+  .toggle__wrapper {
+    width: 500px;
+    height: 250px;
+    margin: -4px -2px; 
+    border-radius: 500px;
+    background: linear-gradient(hsla(39, 100%, 44%, 1), hsla(39, 100%, 42%, 0.1));
+    box-shadow: 0px 5px 1px 0 hsla(41, 100%, 57%, 0.7);
+  }
+  
+  .toggle__bg {
+    width: 500px;
+    height: 250px;
+    background: hsla(199, 43%, 59%, 1);
+    background: linear-gradient(to right, hsla(199, 43%, 59%, 1) 50%, hsla(18, 77%, 50%, 1) 50% 100%);
+    background-size: 200% 100%;
+    background-position: 75%;
+    border-radius: 500px;
+    border: solid 5px transparent;
+    background-clip: padding-box;
+    box-shadow: inset 0px 30px 50px 15px hsla(0, 0%, 0%, 0.30);
+    transition: all 0.85s ease-in-out;
+  }
+  
+  .toggle__sphere {
+    position: relative;
+    height: 238px;
+    width: 238px;
+    background: hsla(18, 100%, 62%, 1);
+    background: 
+      linear-gradient(to right, hsla(199, 43%, 59%, 1) 50%, hsla(18, 77%, 50%, 1) 50% 100%);
+    border-radius: 50%;
+    transform-origin: top left;
+    transform: translateY(1px);
+    box-shadow:  
+      2px 0px 5px 1px hsla(18, 77%, 15%, 0.05), 
+      0px 10px 10px 1px hsla(18, 77%, 15%, 0.2), 
+      -3px 0px 3px 1px hsla(0, 0%, 0%, 0.75);
+    transition: all 0.85s ease-in-out;
+  }
+  
+  .toggle__sphere:before, 
+  .toggle__sphere:after {
+    content: '';
+    position: absolute;
+    left: calc(50% - 20px);
+    height: 1px;
+    width: 40px;
+    background: hsla(0, 0%, 0%, 0.25);
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px 0px hsla(0, 0%, 0%, 0.25);
+  }
+  
+  .toggle__sphere:before {
+    top: -2px;
+  }
+  
+  .toggle__sphere:after {
+    bottom: -1px;
+  }
+  
+  .toggle__sphere-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: inset 0px -30px 30px 15px hsla(0, 0%, 0%, 0.1)
+  }
+  
+  .toggle__sphere-bg {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    border-radius: 50%;
+    transition: transform 0.85s ease-in-out;
+  }
+  
+  .toggle__sphere-bg:before, 
+  .toggle__sphere-bg:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .toggle__sphere-bg:before {
+    background-color: hsla(18, 77%, 50%, 1);
+    border-radius: 50%;
+  }
+  
+  .toggle__sphere-bg:after {
+    background-color: hsla(199, 43%, 59%, 1);
+    transform: rotateY(180deg);
+    border-radius: 50%;
+  }
+  
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    position: absolute;
+  }
+  
+  input:checked + .toggle__bg {
+    background-position: 25%;
+  }
+  
+  input:checked + .toggle__bg .toggle__sphere {
+    transform: translateX(250px) translateY(1px);
+    box-shadow:  
+      -2px 0px 5px 1px hsla(18, 77%, 15%, 0.05), 
+      0px 10px 10px 1px hsla(18, 77%, 15%, 0.2), 
+      3px 0px 3px 0px hsla(0, 0%, 0%, 0.75);
+  }
+  
+  input:checked + .toggle__bg .toggle__sphere-bg {
+    transform: rotateY(180deg);
+  }
+  
+  
+  
+  
+  
+  
+  
 
 
 
@@ -491,10 +697,11 @@ a:hover {
     position: fixed;
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 10vh;
     justify-content: space-around;
-    z-index: 10;
+    align-items: center;
+    width: 100%;
+    height: 5rem;
+    z-index: 100;
   }
 
   #marca{
@@ -533,36 +740,36 @@ a:hover {
     margin-left: 0;
   }
 
+  #video2{
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .divisor{
+    width: 88%;
+    height: 10%;
+    margin-left: 6%;
+  }
+
+  #menu, #salir{
+    border: none;
+  }
+
 }
 
 /* MENU HAMBURGUESA */
-
-/* #pushed{
-    color: #12A098;
-    font-weight: bold;
-    background-color: #12A098;
-    padding: 5px;
-}
 
 #hamburguesitas{
     display: flex;
 }
 
-@media(max-width: 570px){
-    
-    header{
-        height: fit-content;
-        width: 100%;
-        background-color: #12A098;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        margin: 0;
-        gap: 15px;
-        padding: 20px 0 20px 0;
+@media(min-width: 570px){
+    #hamburguesa{
+        display: none;
     }
+}
+
+@media(max-width: 570px){
 
 .nav{
         display: none;
@@ -575,22 +782,96 @@ a:hover {
         color: #0F292F;
         background-color: #0F292F;
         text-align: right;
+        height: 100vh;
     }
     #menu_hamburguesa{
         display: contents;
     }
     #container_fluid{
-    height: 15vw;
+    width: 100%;
+    height: 10vh;
     background-color: #CCCCCC;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    padding-right: 5vw;
+    padding-right: 3%;
+    position: fixed;
+    z-index: 10;
     }
+
+    #container_fluid img{
+        height: 9vh;
+    }
+
+    #carritoHamburguesa{
+        margin-left: 15%;
+    }
+
+    #container_fluid #carritoHamburguesa {
+        height: 5vh;
+    }
+
     #boton_hamburguesa{
-    background-color: #0F292F;
+    /* background-color: #0F292F; */
+    padding: 3px;
+    color: #0F292F;
+    font-size: xx-large;
     }
+
+    #hamburguesitas{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #hamburguesitas div{
+        height: 12vh;
+        align-items: center;
+        margin-top: 15%;
+    }
+
+    #hamburguesitas img{
+        height: 80%;
+        width: auto;
+    }
+
     .navbar-toggler-icon{
     background-color: #0F292F;
     }
-}    */
+}   
+
+/* DARK MODE */
+.form-check{
+    display: flex;
+    justify-content: end;
+    width: 92%;
+    margin-left: 8%;
+    padding-right: 3%;
+    padding-top: 1%;
+}
+
+.form-check input{
+    opacity: 1;
+}
+
+input[type="checkbox"]:checked ~ .nav
+{
+    background-color: #0F292F;
+}
+
+/* DARK MODE */
+/* .switch{
+    background-color: #0F292F;
+    border-radius: 1000px;
+    border: none;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    outline: none;
+}
+
+.dark{
+    background-color: #0F292F;
+} */
