--- a/src/main/resources/static/web/css/carrito.css
+++ b/src/main/resources/static/web/css/carrito.css
@@ -73,7 +73,7 @@ h1 {
   border-top: 2px solid black;
 }
 box-icon{
- width: 48px; 
+ width: 48px;
 }
 p{
   text-align: center;
@@ -121,9 +121,7 @@ p{
   background-size: auto;
 }
 
-
-/* Global settings */
-/* Global "table" column settings */
+/* ------------------------ CARRITO --------------- */
 .product-image {
   float: left;
   width: 20%;
@@ -131,29 +129,31 @@ p{
 
 .product-details {
   float: left;
-  width: 37%;
+  width: 20%;
 }
 
 .product-price {
   float: left;
-  width: 12%;
+  width: 10%;
 }
 
 .product-quantity {
   float: left;
   width: 10%;
 }
-
+.agregar-producto{
+  float: left;
+  width: 15%;
+}
 .product-removal {
   float: left;
-  width: 9%;
+  width: 15%;
 }
 
 .product-line-price {
   float: left;
-  width: 12%;
+  width: 5%;
   text-align: right;
-  padding-right: 2rem;
 }
 .labels{
   font-family: 'Potta One', cursive;
@@ -162,7 +162,6 @@ p{
   padding-top: 3rem;
 }
 
-/* This is used as the traditional .clearfix class */
 .group:before, .shopping-cart:before, .column-labels:before, .product:before, .totals-item:before,
 .group:after,
 .shopping-cart:after,
@@ -181,16 +180,13 @@ p{
   zoom: 1;
 }
 
-/* Apply clearfix in a few places */
-/* Apply dollar signs */
 .product .product-price:before, .product .product-line-price:before, .totals-value:before {
   content: '$';
 }
 
-/* Body/Header stuff */
 
 label {
-  color: #aaa;
+  color: #CCCCCC;
 }
 
 .shopping-cart {
@@ -202,7 +198,7 @@ label {
   padding-bottom: 15px;
   border-bottom: 2px solid black;
 }
-.column-labels .product-image, .column-labels .product-details, .column-labels .product-removal {
+.column-labels .product-image, .column-labels .product-details, .column-labels .product-removal, .column-labels .agregar-producto {
   text-indent: -9999px;
 }
 
@@ -221,6 +217,7 @@ label {
   width: 100px;
 }
 .product .product-details .product-title {
+  font-size: 1.3rem;
   margin-right: 20px;
   padding-top: 3rem;
 }
@@ -229,7 +226,19 @@ label {
   line-height: 1.4em;
 }
 .product .product-quantity input {
-  width: 40px;
+  width: 30px;
+}
+.product .agregar{
+  border: 0;
+  padding: 6px 12px;
+  background-color: #af255e;
+  color: #CCCCCC;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-size: 15px;
+  border-radius: 3px;
+}
+.product .agregar:hover{
+  background-color: #6b254b;
 }
 .product .remove-product {
   border: 0;
@@ -242,9 +251,6 @@ label {
 }
 .product .remove-product:hover {
   background-color: #6b254b;
-}
-.product .product-line-price{
-  padding-right: 2rem;
 }
 
 /* Totals section */
@@ -302,44 +308,66 @@ label {
   right: -15px;
 }
 
-/* Make adjustments for tablet */
-@media screen and (max-width: 650px) {
+
+/*---------------------  CELULAR -------------------------*/
+@media(max-width:430px){
+  .botones{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 570px) {
   .column-labels {
     display: none;
   }
-  .product-price {
-    clear: both;
-    width: 70px;
-    padding-left: 0.5rem;
+  .product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-image{
+    width: auto;
+  }
+  .product-price{
+    width: auto;
+  }
+  .product-details{
+    display: none;
   }
   .product-quantity {
-    width: 100px;
+    display: flex;
+    width: auto;
   }
-  .product-quantity input {
-    margin-left: 10px;
+  .product-price:after {
+    content: ' x';
   }
-  .product-quantity:before {
-    content: 'x';
+  .botones{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  .agregar-producto{
+    width: auto;
   }
   .product-removal {
     width: auto;
   }
   .product-line-price {
-    float: right;
-    width: 70px;
+    width: auto;
   }
-}
-
-
-
+  .product-line-price:before{
+    content: 'Subtotal: $' !important;
+  }
+  .arreglo{
+    padding-top: 1.5rem;
+  }
 
 /* MENU HAMBURGUESA */
 
 #hamburguesitas{
   display: flex;
 }
-
-@media(max-width: 570px){
   .nav{
       display: none;
       }
@@ -358,14 +386,14 @@ label {
   }
   p{
     color: #CCCCCC;
-  }   
+  }
   h1{
     padding: 0;
     padding-top: 1rem;
     text-align: center;
     margin: 0;
     font-size: 1.5rem;
-  } 
+  }
   #divisorBurgers{
     margin: 1rem 1rem 1rem 1rem;
   }
@@ -409,7 +437,7 @@ label {
     padding: 3px;
     color: #0F292F;
     font-size: xx-large;
-    } 
+    }
   #hamburguesitas{
     height: 100vh;
     display: flex;
@@ -433,21 +461,10 @@ label {
     margin: 0 1rem;
     padding: 0;
   }
-  .product .product-image img{
-    width: 50vw;
-    image-rendering: optimizeQuality;
-    margin-left: 5rem;
-  }
-  .product-title{
-    display: none;
-  }
-  .product-description{
-    display: none;
-  }
   .totals{
-    margin: 0;
-    padding: 0;
-    padding-right: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .totals .totals-item label {
     width: auto;
@@ -455,15 +472,274 @@ label {
   .totals .totals-item .totals-value {
     width: auto;
   }
+  .totals .totals-input{
+    justify-content: space-between !important;
+  }
   .radioImg{
     width: 15vw;
   }
   .checkoutDiv{
     padding-right: 1rem;
   }
-  #video{
-    margin: 0;
+}
+
+/* --------------------- TABLET ---------------------- */
+@media (min-width: 571px) and (max-width: 820px){
+  header{
+    flex-direction: column;
+  }  
+  main{
+    width: 100%;
+    height: 95vh;
+    margin: 5vh 0 0 0;
+  }
+  .nav{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 5rem;
+    z-index: 100;
+  }
+  #marca{
+    width: 4.5rem;
+    padding: 0;
+    margin-bottom: 1.5rem;
+    padding: 0.3rem;
+  }
+  img{
+    width: 100%;
+    margin-left: 0;
+  }
+  .center img{
+    height: 100%;
+  }
+  #pizzas{
+    width: 100%;
+    margin: 0%;
+    flex-wrap: wrap;
+  }
+  .nav div{
+    width: 3.5rem;
+  }
+  #pizzas img{
+    width: 4rem;
+    margin-left: 5%;
+  }
+  .section-products{
+    width: 100%;
+    margin-left: 0;
+  }
+  #video2{
+    width: 100%;
+    margin-left: 0;
+  }
+  .divisor{
+    width: 88%;
+    height: 10%;
+    margin-left: 6%;
+  }
+  #menu, #salir{
+    border: none;
+  }
+
+  /*-------------CARRITO------------*/
+  .shopping-cart{
     margin-top: 1rem;
-    width: 100vw;
+  }
+  .column-labels {
+    display: none;
+  }
+  .product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-image{
+    width: auto;
+  }
+  .product .product-image img{
+    width: 200px;
+  }
+  .product-title{
+    width: auto;
+  }
+  .product .product-details .product-title{
+    padding-top: 1rem;
+  }
+  .product-price{
+    width: auto;
+  }
+  .product-quantity {
+    display: flex;
+    width: auto;
+  }
+  .product-price:after {
+    content: ' x';
+  }
+  .botones{
+    display: flex;
+    gap: 2rem;
+    order: 1;
+  }
+  .agregar-producto{
+    width: auto;
+  }
+  .product-removal {
+    width: auto;
+  }
+  .product-line-price {
+    width: auto;
+  }
+  .product-line-price:before{
+    content: 'Subtotal: $' !important;
+  }
+  .arreglo{
+    padding-top: 1rem;
+  }
+  .totals{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .totals .totals-item label {
+    width: auto;
+  } 
+   .totals .totals-item .totals-value {
+    width: auto;
+  }
+  .totals .totals-input{
+    justify-content: space-between !important;
+  } 
+  .radioImg{
+    width: 15vw;
+  }
+}
+
+/* ---------------- MONITOR PEQUEÑO ---------------- */
+@media (min-width: 821px) and (max-width: 1280px){
+  header{
+    flex-direction: column;
+  }  
+  main{
+    width: 100%;
+    height: 95vh;
+    margin: 0;
+    margin-top: 4rem;
+  }
+  .nav{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 5rem;
+    z-index: 100;
+  }
+  #marca{
+    width: 4.5rem;
+    padding: 0;
+    margin-bottom: 1.5rem;
+    padding: 0.3rem;
+  }
+  img{
+    width: 100%;
+    margin-left: 0;
+  }
+  .center img{
+    height: 100%;
+  }
+  #pizzas{
+    width: 100%;
+    margin: 0%;
+    flex-wrap: wrap;
+  }
+  .nav div{
+    width: 3.5rem;
+  }
+  #pizzas img{
+    width: 4rem;
+    margin-left: 5%;
+  }
+  .section-products{
+    width: 100%;
+    margin-left: 0;
+  }
+  #video2{
+    width: 100%;
+    margin-left: 0;
+  }
+  .divisor{
+    width: 88%;
+    height: 10%;
+    margin-left: 6%;
+  }
+  #menu, #salir{
+    border: none;
+  }
+
+  /* --------------- CARRITO ------------------- */
+  .shopping-cart{
+    margin-top: 1rem;
+  }
+  .column-labels{
+    display: none;
+  }
+  .product{
+    display: flex;
+    align-items: center;
+  }
+  .botones{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-image {
+    float: left;
+    width: 15%;
+  }
+  
+  .product-details {
+    float: left;
+    width: 25%;
+  }
+  
+  .product-price {
+    float: left;
+    width: 10%;
+  }
+  .product-price:after{
+    content: ' x';
+  }
+  
+  .product-quantity {
+    display: flex;
+    float: left;
+    width: 10%;
+  }
+  .agregar-producto{
+    float: left;
+    width: 20%;
+  }
+  .product-removal {
+    float: left;
+    width: 20%;
+  }
+  .product-line-price {
+    float: left;
+    width: 15%;
+    text-align: right;
+  }
+  .arreglo{
+    padding-top: 2rem;
+  }
+  .radioImg{
+    width: 7vw;
+  }
+  .checkoutDiv{
+    margin-right: 1.5rem;
   }
 }
